# iitu-labs

1 course/Database Design. Introduction to SQL./01_database_lab/: 01_database_lab_light.md
1 course/database-design-introduction-to-sql/01_database_lab/: 01_database_lab_dark.html
1-course/1-semester/algorithmization-and-programming/01_algo_prog_lab/: README.md
1-course/1-semester/algorithmization-and-programming/02_algo_prog_lab/: CMakeLists.txt  README.md
1-course/1-semester/algorithmization-and-programming/02_algo_prog_lab/src/: main.cpp
1-course/1-semester/algorithmization-and-programming/03_algo_prog_lab/: README.md
1-course/1-semester/algorithmization-and-programming/04_algo_prog_lab/: README.md
1-course/1-semester/algorithmization-and-programming/05_algo_prog_lab/: README.md
1-course/1-semester/database-design-introduction-to-sql/01_database_lab/: 01_database_lab_dark.html  01_database_lab_dark.md  01_database_lab_light.md
1-course/1-semester/database-design-introduction-to-sql/02_database_lab/: 02_database_lab_dark.html  02_database_lab_dark.md  02_database_lab_light.md  dbdiagram.txt
1-course/1-semester/database-design-introduction-to-sql/03_database_lab/: README.md  docker-compose.yml
1-course/1-semester/database-design-introduction-to-sql/05_database_lab/: README.md
1-course/1-semester/database-design-introduction-to-sql/06_database_lab/: README.md
1-course/1-semester/database-design-introduction-to-sql/07_database_lab/: README.md
Database Design. Introduction to SQL./01_database_lab/: 01_database_lab_dark.md
(+84 files in other folders)
